<resources>
    <string name="app_name">Cuadro Cromático</string>
    <string name="button">Button</string>
    <string name="play">Jugar</string>
    <string name="nivel1">Baja</string>
    <string name="nivel2">Media</string>
    <string name="nivel3">Alta</string>
    <string name="desnivel1">Tablero 5x5</string>
    <string name="desnivel2">Tablero 6x6</string>
    <string name="desnivel3">Tablero 7x7</string>
    <string name="salir">Salir</string>
    <string name="titulo">Cuadro</string>
    <string name="titulo2">Cromático</string>
    <string name="elegir">Seleccione un nivel antes de jugar</string>
    <string name="ayuda">Ayuda</string>
    <string name="reset">Reiniciar </string>
    <string name="cambiar"> Cambiar nivel</string>
    <string name="fondo">Oscurecer</string>
    <string name="nombrejugador">Nombre de jugador</string>
    <string name="ganar">¡Has Ganado!</string>
    <string name="puntaje">La cantidad de movimientos se encuentra entre los mejores 15.Ingresa tu nombre para figurar en el ranking.</string>
    <string name="puntaje2"> Pero no quedaste el en podio.</string>
    <string name="ranking">Ranking</string>
    <string name="inicio2">Inicio</string>
    <string name="volverajugar">Volver a jugar</string>
    <string name="cambiardificul">Cambiar dificultad</string>
    <string name="sonidomenu">Extra</string>
    <string name="grupo">Créditos</string>
    <string name="sonido">Sonido y Musica</string>
    <string name="code">Codigo</string>
    <string name="atras">Atras</string>
    <string name="texto1">"Efectos de sonido "</string>
    <string name="texto2">Efectos de sonido adicionales</string>
    <string name="texto3">Música obtenidos de</string>
    <string name="texto4">Zapsplat</string>
    <string name="grupo7">Grupo 7</string>
    <string name="noplayer">Sin jugador</string>
    <string name="intercambios">Intercambios: </string>
    <string name="salirdDialog">Salir</string>
    <string name="confirmacionDialog">¿Está seguro que desea salir?</string>
    <string name="SalidaDialog">¿Está seguro que desea salir?,perderás el progreso de esta partida.</string>
    <string name="SalidaDialogrank">¿Que deseas hacer?</string>
    <string name="aceptarDialog">Si, muy seguro!</string>
    <string name="cancelarDialog">Mejor no, me quedo!</string>
    <string name="id">SIN JUGADORES</string>
    <string name="idtop">Nombre Jugador</string>
    <string name="inter">999</string>
    <string name="intertop">Puntaje</string>
    <string name="dificultad">Dificultad</string>
    <string name="dificultadBaja">Baja</string>
    <string name="dificultadMedia">Media</string>
    <string name="dificultadAlta">Alta</string>
    <string name="inicio">Preparate y memoriza la solucion,el juego es por comenzar en </string>
    <string name="disclaimer">El juego está por empezar espera que cargue</string>

</resources>
