<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:keepScreenOn="true"
    android:orientation="vertical"
    tools:context="androidunlp.tpgrupo7.cuadrocromatico.Menu">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:stretchColumns="*">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="30dp"
            android:background="#80000000"
            android:gravity="center"
            android:text="@string/titulo"
            android:textColor="@android:color/white"
            android:textSize="80sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#80000000"
            android:gravity="center"
            android:text="@string/titulo2"
            android:textColor="@android:color/white"
            android:textSize="40dp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/jugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="#80000000"
            android:onClick="play"
            android:padding="5dp"
            android:text="@string/play"
            android:textColor="@android:color/white"
            android:textSize="35sp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/baja"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#80000000"
                android:onClick="selec"
                android:text="@string/nivel1"
                android:textColor="@android:color/white"
                android:textSize="25sp"

                />

            <Button
                android:id="@+id/media"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#80000000"
                android:onClick="selec"
                android:text="@string/nivel2"
                android:textColor="@android:color/white"
                android:textSize="25sp"

                />

            <Button
                android:id="@+id/alta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#80000000"
                android:onClick="selec"
                android:text="@string/nivel3"
                android:textColor="@android:color/white"
                android:textSize="25sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textobaja"
                android:layout_width="wrap_content"
                android:background="#80000000"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/desnivel1"
                android:textColor="@android:color/darker_gray"
                android:textSize="15sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textomedia"
                android:layout_width="wrap_content"
                android:background="#80000000"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/desnivel2"
                android:textColor="@android:color/darker_gray"
                android:textSize="15sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textoalta"
                android:layout_width="wrap_content"
                android:background="#80000000"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/desnivel3"
                android:textColor="@android:color/darker_gray"
                android:textSize="15sp"
                android:visibility="invisible" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/g7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:background="#80000000"
        android:gravity="center"
        android:onClick="creditosOnClick"
        android:text="@string/grupo"
        android:textColor="#97ffffff"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/sonidomenu"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_above="@+id/g7"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:background="#80000000"
        android:onClick="sonido"
        android:src="@drawable/ic_volume" />

    <ImageView
        android:id="@+id/Rank"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_above="@+id/g7"
        android:layout_alignParentRight="true"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:background="#80000000"
        android:onClick="salir"
        android:src="@drawable/ic_exit" />

    <ImageView
        android:id="@+id/salir"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_above="@+id/g7"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="10dp"
        android:background="#80000000"
        android:onClick="rank"
        android:src="@drawable/ic_star" />

    <TextView
        android:id="@+id/sonidotext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sonidomenu"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:background="#80000000"
        android:gravity="center"
        android:text="@string/sonidomenu"
        android:textSize="25sp" />

</RelativeLayout>


